<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShopActivity">

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/productName"
            app:layout_constraintStart_toStartOf="@+id/name" app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" android:layout_marginTop="72dp"
            app:layout_constraintHorizontal_bias="0.506" android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" android:hint="@string/product"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/productSize"
            app:layout_constraintStart_toStartOf="@+id/productName"
            app:layout_constraintEnd_toEndOf="@+id/productName"
            app:layout_constraintTop_toBottomOf="@+id/productName" android:layout_marginTop="50dp"
            app:layout_constraintHorizontal_bias="0.0" tools:ignore="SpeakableTextPresentCheck"
            android:minHeight="48dp" android:hint="@string/size"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/productPrice"
            app:layout_constraintStart_toStartOf="@+id/productSize"
            app:layout_constraintEnd_toEndOf="@+id/productSize"
            app:layout_constraintTop_toBottomOf="@+id/productSize" android:layout_marginTop="50dp"
            app:layout_constraintHorizontal_bias="0.0" android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" android:hint="@string/price"/>
    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/next"
            app:layout_constraintStart_toStartOf="@+id/productPrice"
            app:layout_constraintEnd_toEndOf="@+id/productPrice"
            app:layout_constraintTop_toBottomOf="@+id/productPrice" android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.526"/>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/back"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="120dp"
            app:layout_constraintEnd_toEndOf="@+id/next" app:layout_constraintStart_toStartOf="@+id/next"/>
</androidx.constraintlayout.widget.ConstraintLayout>