<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.169"
            android:id="@+id/textView"/>
    <EditText
            android:layout_width="298dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/shopName"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="72dp"
            app:layout_constraintHorizontal_bias="0.506" android:minHeight="48dp" android:hint="@string/name"/>
    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/next"
            app:layout_constraintStart_toStartOf="@+id/shopName"
            app:layout_constraintEnd_toEndOf="@+id/shopName"
            app:layout_constraintTop_toBottomOf="@+id/shopName" android:layout_marginTop="140dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>